--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/anywherearc/slippod.github.io#readme",
   "devDependencies": {
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "live-server": "^1.2.2"
+  },
+  "dependencies": {
   }
 }
